logs/Slang/chapter-8/8.26.4--illegal_implements_parameter.sv.log
name: illegal_implements_parameter
description: implementing parameter that resolves to an interface class is not allowed
should_fail: 1
tags: 8.26.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_implements_parameter.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_implements_parameter.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_implements_parameter.sv:13:2: error: language feature not yet supported
	class Hello #(type T = ihello) implements T;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_implements_parameter.sv:19:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.4--illegal_implements_parameter.sv:22:9: error: language feature not yet supported
		obj = new;
		      ^~~
